# openapi2skill

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  known_openapi.csv
.github/workflows/: rust.yml
scripts/: install_known_api.sh
scripts/git_hooks/: pre-push  setup.sh
src/: cli.rs  error.rs  fetcher.rs  lib.rs  logging.rs  main.rs  models.rs  writer.rs
src/writer/: auth.rs  endpoint.rs  mod.rs  pipeline.rs  schema.rs  skill.rs  utils.rs
src/writer/endpoint/: body.rs  info.rs  mod.rs  params.rs  refs.rs  render.rs  writer.rs
src/writer/schema/: composition.rs  context.rs  mod.rs  properties.rs  render.rs  types.rs  writer.rs
tests/: integration.rs
tests/assets/: 31_types.openapi.json  cyclic.json  openapi31_types.json
