[package]
name = "openapi2skill"
version = "0.2.2"
edition = "2024"
description = "Convert an OpenAPI 3.x specification into an AI Agent Skill — a tree of markdown files an AI agent can navigate efficiently."
license = "MIT"
homepage = "https://github.com/BaptisteRoseau/openapi2skill"
repository = "https://github.com/BaptisteRoseau/openapi2skill"
readme = "README.md"
keywords = ["openapi", "ai", "agent", "skill", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
oas3 = "0.22.0"
reqwest = "0.13.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3"

[profile.release]
lto = true
strip = true
